----------------------------------------------------------------------
 OmegaT 4.0.1 update 1
----------------------------------------------------------------------
  2 Enhancements
  1 Bug fix
  2 Localisation updates
----------------------------------------------------------------------
4.0.1 update 1 vs 4.0.1

  Implemented requests:

  - Filter for RELAX NG XML
  https://sourceforge.net/p/omegat/feature-requests/1281/

  - Improve Segment Properties pane appearance with dark themes
  https://sourceforge.net/p/omegat/feature-requests/1284/

  Bug fixes:

  - Fixed an issue with the File Filters dialog on some Linux systems

  Localisation Updates:

  - Italian localisation updated to 4.0.1 (UI, readme, documentation)
  - Russian localisation updated to 4.0.1 (UI)

----------------------------------------------------------------------
 OmegaT 4.0.1 (2016-10-03)
----------------------------------------------------------------------
  6 Enhancements
  2 Bug fixes
  1 Localisation update
----------------------------------------------------------------------
4.0.1 vs 4.0.0 update 1

  Implemented requests:

  - Highlight errors in OmegaT QA (originally, check_rules.groovy)
  https://sourceforge.net/p/omegat/feature-requests/1001/

  - Batch-mode spellchecking
  https://sourceforge.net/p/omegat/feature-requests/717/

  - Add UI for checking all translation issues
  https://sourceforge.net/p/omegat/feature-requests/1271/

  - Allow enabling/disabling individual LanguageTool rules
  https://sourceforge.net/p/omegat/feature-requests/608/

  - Enable use of LanguageTool remote servers or local installations
  https://sourceforge.net/p/omegat/feature-requests/1273/

  Other changes:

  - Update LanguageTool to 3.5

  Bug fixes:

  - Relative project paths not normalized
  https://sourceforge.net/p/omegat/bugs/837/

  - Tokenizers did not automatically match languages when creating a
new project

  Localisation Updates:
